--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
 }
+.h2 {
+    font-size: 36px;
+}
+
+
 
 header {
     box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
@@ -95,6 +100,7 @@ header {
     justify-content: center;
     align-items: center;
     position: relative;
+    min-height: 600px;
 }
 
 .absolute {
@@ -132,3 +138,39 @@ header {
     background-color: #9A54BC;
     color: white;
 }
+
+.topBrandsIconContainer {
+    /* position: relative; */
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+}
+
+.iconsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 75%;
+}
+
+.iconsContainer img {
+    width: 100px;
+}
+
+.howCollabHelpMainContainer {
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.howHelpContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
