--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
     font-size: 36px;
 }
 
-
-
 header {
     box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
         -webkit-box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
@@ -163,14 +161,69 @@ header {
 .howCollabHelpMainContainer {
     margin-top: 150px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
 .howHelpContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    width: 70%;
+    align-items: flex-start;
+    margin-top: 8rem;
 }
 
+.paraContainer {
+    width: 30rem;
+    height: 27rem;
+}
+
+.howhelpBtnContainer {
+    width: 100%;
+    padding: 0.5rem;
+    box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
+        -webkit-box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
+        -moz-box-shadow: -1px 1px 3px -1px rgba(8, 8, 8, 0.29);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+}
+
+.howhelpBtnContainer button {
+    width: 50%;
+    padding: 0.6rem;
+    cursor: pointer;
+    border: none;
+    border: 2px solid white;
+    background-color: transparent;
+    font-weight: 500;
+}
+
+.howhelpBtnContainer button:hover {
+    background-color: #60267F;
+    color: white;
+    border: 2px solid #9A54BC;
+    border-radius: 5px;
+}
+
+.howHelpAllTextContainer {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    margin: 1.5rem auto;
+   
+}
+
+.howHelpAllTextContainer p {
+    padding: 1rem;
+    background-color: #F2F2F2;
+    font-size: 14px;
+}
+
+.imgContainer img{
+    width: 15rem;
+   
+}
