--- a/style.css
+++ b/style.css
@@ -227,3 +227,52 @@ header {
     width: 15rem;
    
 }
+
+.videoMainContainer {
+    display: flex;
+    margin-top: 150px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.videoMainContainer p {
+    width: 50%;
+    text-align: center;
+}
+
+.projectDoneContainer {
+    display: flex;
+    margin-top: 150px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.projectDoneCardsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.card p,span {
+    margin-left: 50px;
+    font-weight: 500;
+}
+
+.card img {
+    width: 400px;
+}
+
+.card p {
+    color: #60267F;
+}
