--- a/css/main/section7.css
+++ b/css/main/section7.css
@@ -1,16 +1,19 @@
-.designationMainContainer {
+.starsContainer {
+    background-color: #E2BDF21C;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    height: 400px;
 }
 
-.designationParaArrows {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 70px 100px;
+.starsPara p {
+    width: 50%;
+    text-align: center;
+    font-weight: 500;
 }
 
 /* strelytes 
@@ -24,23 +27,32 @@ content: "\F12F"
 
 */
 
-.designationParaArrows p {
-    padding: 0 120px;
-    font-size: 14px;
+.starsRoundFaceContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    gap: 20px;
 }
 
-.designationParaArrows img {
-    cursor: pointer;
-}
-
-.designationPara {
+.starsPara {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    font-size: 14px;
 }
 
-.designationPara img {
-    width: 100px;
+.starsPara::before {
+    font-family: "bootstrap-icons";
+    content: '\F12F';
+    margin-right: 160px;
+    font-size: 50px;
 }
+
+.starsPara::after {
+    font-family: "bootstrap-icons";
+    content: '\F138';
+    margin-left: 160px;
+    font-size: 50px;
+}
+
