--- a/css/main/section9.css
+++ b/css/main/section9.css
@@ -1,5 +1,5 @@
 .collabMainContainer {
-    /* margin-top: 400px; */
+    margin-top: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,6 +11,7 @@
     color: white;
     text-align: center;
     margin-top: 105px;
+    font-size: 30px;
 
 }
 
