--- a/css/main/section10.css
+++ b/css/main/section10.css
@@ -1,7 +1,7 @@
 .questionMainContainer {
     display: flex;
     width: 100%;
-    background-color: #e2bdf277;
+    background-color: #E2BDF21C;;
 }
 
 .stillHaveQuestionContainer {
